--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,14 +31,15 @@ jobs:
         sudo apt-get install -y \
           mingw-w64 \
           mingw-w64-tools \
-          mingw-w64-dev \
           pkg-config \
           cmake \
           make \
-          git
+          git \
+          binutils-mingw-w64
         
         # Verify MinGW installation
         x86_64-w64-mingw32-gcc --version
+        x86_64-w64-mingw32-g++ --version
     
     - name: Create build directory
       run: mkdir -p build-windows
